--- a/anfisa/requirements.txt
+++ b/anfisa/requirements.txt
@@ -1,4 +1,17 @@
+certifi==2025.4.26
+charset-normalizer==3.4.2
+colorclass==2.2.2
+coverage==7.8.0
 Django==2.2.19
+docopt==0.6.2
+idna==3.10
+packaging==25.0
+pillow==11.2.1
+pip-upgrader==1.4.15
 pytz==2024.2
+requests==2.32.3
 setuptools==75.1.0
+sorl-thumbnail==12.10.0
 sqlparse==0.5.1
+terminaltables==3.1.10
+urllib3==2.4.0
